<resources>
    <string name="app_name">WallPaper_Shopping</string>
    <string name="search">search</string>
    <string name="btn_search">بگرد</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>

    <string name="text_login">Login</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_welcome">Hello, %1$s</string>

    <string name="prompt_login">Click here to login</string>
    <string name="prompt_signup">Click here to sign up</string>

    <string name="toast_no_empty_field">Please fill all fields</string>

    <string name="progress_signup">Sign up in progress…please wait</string>
    <string name="progress_login">Login in progress…please wait</string>
    <string name="progress_quote">Fetching quote…please wait</string>


    <string name="button_text_protected_quote">Get Quote</string>
    <string name="button_text_logout">Logout</string>

    <string name="Home">Home</string>
    <string name="Cart">Cart</string>
    <string name="AboutUS">AboutUS</string>
    <string name="Favorite">Favorite</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="price">قیمت: 100000 تومان</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
